Update jvm arguments